[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kaicalls"
version = "0.1.0"
description = "Official KaiCalls SDK — give your AI agent a phone. Outbound calls, agents, leads, SMS, transcripts, and webhooks."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "KaiCalls", email = "support@kaicalls.com" }]
keywords = ["kaicalls", "voice", "ai", "phone", "calls", "sms", "receptionist"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Telephony",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["requests>=2.25"]

[project.urls]
Homepage = "https://www.kaicalls.com"
Documentation = "https://www.kaicalls.com/docs/api"
Repository = "https://github.com/cgallic/kai_calls"

[tool.hatch.build.targets.wheel]
packages = ["kaicalls"]
